--- a/marino_chris_eva_package/index.html
+++ b/marino_chris_eva_package/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>You have one new package!</title>
 	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141245946-1"></script>
     <script>
@@ -11,8 +12,40 @@
       gtag('js', new Date());
       gtag('config', 'UA-141245946-1');
     </script>
+    <style>
+    	body {font-family: "Lato", sans-serif; margin: 0}
+    	h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+    </style>
 </head>
-<body>
-	<h1>Not ready yet!</h1>
-</body>
+<body><center>
+	<div style="padding-top:20px; padding-bottom:5px; background:#229dcc; color: white" align="center"><b>
+		    <img src="it.png" height="50px"><img src="il.png" height="50px"><img src="de.png" height="50px">
+    		<h1>Greetings from Israel!</h1>
+			I've sent you some very common ingredients to the Israeli cousine. Hope it all arrived intact, and that you'll enjoy it!
+			<br>&nbsp;
+  	</b></div>
+	<div style="background:linear-gradient(to bottom, #229dcc , white); height:20px"></div>
+	<div style="background-color: white; height:10px"></div>
+	<br>
+	<div style="margin-right: 5%; margin-left: 5%">
+		<table width="100%">
+			<tr>
+				<td width="20%"><img src="zaatar.jpg" style="max-height: 300px"></td>
+				<td>This is <b><a href="https://en.wikipedia.org/wiki/Za%27atar">Za'atar</a></b>. It's a very common mixture - probably as common as salt and pepper. It is based on a plant called <i><a href="https://en.wikipedia.org/wiki/Origanum_syriacum">Origanum syriacum</a></i>, which gives it its unique tatse. Use it on chicken breast or fresh salads, or even on bread with white cheese.</td>
+			</tr>
+			<tr>
+				<td width="20%"><img src="cumin.jpg" style="max-height: 300px"></td>
+				<td>This is <b><a href="https://en.wikipedia.org/wiki/Cumin">Cumin</a></b>. This spice also bears a very distinct taste. It goes great with chickpeas (Hummus) and chicken too. I also add it to Bolognese sauce, to give it an extra kick.</td>
+			</tr>
+			<tr>
+				<td width="20%"><img src="raas.jpg" style="max-height: 300px"></td>
+				<td>This is <b><a href="https://en.wikipedia.org/wiki/Ras_el_hanout">Ras El-Hanout</a></b>, and this I know none of you ever received from me. The name comes from Arabic, which means "head of the store" - as in, that's the best spice there is, so it is presented at the front. It's made from up to 15 different ingredients, and so each store and compamy make a different variation. It goes great with chicken and meat-balls, veal-meat and long-cooked meats.</td>
+			</tr>
+			<tr>
+				<td width="20%"><img src="coffee.jpg" style="max-height: 300px"></td>
+				<td>This is <b><a href="https://en.wikipedia.org/wiki/Turkish_coffee">Turkish coffee</a></b>, more commonly referred to as "Black Coffee". It's made from ground and unfiltered coffee beans. This specific one also has <a href="https://en.wikipedia.org/wiki/Cardamom">cardamom</a>, which gives it an extra kick. Preparation is simple: put one heaping teaspoon of coffee in a cup, and pour boiled water over it. Stir well and add sugar (I add half a teaspoon). Let it rest so all the coffee-parts drop to the bottom of the cup, then drink. You do not drink the coffee parts.</td>
+			</tr>
+		</table>
+	</div>
+</center></body>
 </html>
