--- a/marino_chris_eva_package/index.html
+++ b/marino_chris_eva_package/index.html
@@ -28,7 +28,7 @@
 	<div style="background-color: white; height:10px"></div>
 	<br>
 	<div style="margin-right: 5%; margin-left: 5%">
-		<table width="100%">
+		<table width="100%" cellpadding="10">
 			<tr>
 				<td width="20%"><img src="zaatar.jpg" style="max-height: 300px"></td>
 				<td>This is <b><a href="https://en.wikipedia.org/wiki/Za%27atar">Za'atar</a></b>. It's a very common mixture - probably as common as salt and pepper. It is based on a plant called <i><a href="https://en.wikipedia.org/wiki/Origanum_syriacum">Origanum syriacum</a></i>, which gives it its unique tatse. Use it on chicken breast or fresh salads, or even on bread with white cheese.</td>
