--- a/marino_chris_eva_package/index.html
+++ b/marino_chris_eva_package/index.html
@@ -20,8 +20,8 @@
 <body><center>
 	<div style="padding-top:20px; padding-bottom:5px; background:#229dcc; color: white" align="center"><b>
 		    <img src="it.png" height="50px"><img src="il.png" height="50px"><img src="de.png" height="50px">
-    		<h1>Greetings from Israel!</h1>
-			I've sent you some very common ingredients to the Israeli cousine. Hope it all arrived intact, and that you'll enjoy it!
+    		<u><h1>Greetings from Israel!</h1></u>
+			<h2>I've sent you some very common ingredients to the Israeli cousine. Hope it all arrived intact, and that you'll enjoy it!</h2>
 			<br>&nbsp;
   	</b></div>
 	<div style="background:linear-gradient(to bottom, #229dcc , white); height:20px"></div>
